# Parser

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  error.py  interface.py  parse.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-app.yml  python-test.yml
Parser/: error.py  interface.py  parse.py
src/: base.py  error.py  interface.py  parse.py
tests/: test_error.py  test_parse.py  test_request.py
