[metadata]
name = Parser
version = 0.0.1
description = Pure python standard library JSON.
author = Yasser Tahiri
author_email = yasserth19@protonmail.com
url = https://github.com/Py-Project/Parser
keywords =
	json
	Parser
	python
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Topic :: Software Development :: Libraries
license = MIT
licence_files =
	LICENSE

[options]
python_requires = >= 3.6
packages = 
	json_prc
